--- a/index.html
+++ b/index.html
@@ -1,9 +1,106 @@
 <html lang="en">
     <head>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+            integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+            crossorigin="anonymous"
+        />
+
+        <link rel="stylesheet" href="/public/style.css" />
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Chat</title>
     </head>
-    <body></body>
+    <body>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="container">
+                    <div class="navbar-header">
+                        <a class="navbar-brand" href="/">Chat</a>
+                    </div>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <button
+                                class="btn btn-success navbar-btn pull-right"
+                            >
+                                Sign in
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container">
+            <div class="page-content page-container" id="page-content">
+                <div class="padding">
+                    <div class="row container d-flex justify-content-center">
+                        <div class="col-md-6 chat_div">
+                            <div class="card card-bordered">
+                                <div class="card-header">
+                                    <h4 class="card-title">
+                                        <strong> Chat </strong>
+                                    </h4>
+                                    <div class="col-md-4">
+                                        <input
+                                            type="text"
+                                            class="col-xs-4 form-control"
+                                            name="input_name"
+                                            placeholder="Enter your name"
+                                        />
+                                    </div>
+                                </div>
+
+                                <div
+                                    class="ps-container ps-theme-default ps-active-y"
+                                    id="chat_content"
+                                    style="
+                                        overflow-y: scroll !important;
+                                        height: 400px !important;
+                                    "
+                                ></div>
+
+                                <div class="publisher bt-1 border-light">
+                                    <input
+                                        id="input_message"
+                                        class="publisher-input"
+                                        type="text"
+                                        placeholder="Write something"
+                                    />
+                                    <a
+                                        class="publisher-btn"
+                                        href="#"
+                                        data-abc="true"
+                                        ><i class="fa fa-smile"></i
+                                    ></a>
+                                    <a
+                                        class="publisher-btn text-info"
+                                        href="#"
+                                        data-abc="true"
+                                        ><i class="fa fa-paper-plane"></i
+                                    ></a>
+                                    <button
+                                        id="input_send"
+                                        class="btn btn-xm btn-primary"
+                                        href="#"
+                                        data-abc="true"
+                                    >
+                                        Send
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script type="" src="/public/chat.js"></script>
+    </body>
 </html>
