--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="/public/style.css" />
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
             integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
             crossorigin="anonymous"
         />
-
-        <link rel="stylesheet" href="/public/style.css" />
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
@@ -26,11 +25,12 @@
                     </div>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <button
+                            <a
+                                href="/login"
                                 class="btn btn-success navbar-btn pull-right"
                             >
                                 Sign in
-                            </button>
+                            </a>
                         </li>
                     </ul>
                 </div>
